--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -42,7 +42,11 @@
         <button>Cadastrar</button>
     </header>
     <main>
-        <div
+        <section style="position: relative; width: 100%; height: 400px; overflow: hidden;">
+            <video autoplay muted loop style="width: 100%; height: auto; object-fit: cover;" src="https://www.pexels.com/pt-br/download/video/2022395/">
+                Seu navegador não suporta a tag de vídeo.
+            </video>
+        </section>
     </main>
     <footer>
         <p>&copy; 2023 Meu Site</p>
